# libringqt

./: CMakeLists.txt  README.md
cmake/: FindRing.cmake  LibRingClientConfig.cmake.in  LibRingQtConfig.cmake.in  extrawarnings.cmake  winBuild.cmake  winBuild64.cmake  wraplibring.cmake
libringqtquick/: CMakeLists.txt  ringqtquick.json
libringqtquick/cmake/: LibRingQtQuickConfig.cmake.in
libringqtquick/src/: accountbuilder.cpp  accountbuilder.h  accountfields.cpp  accountfields.h  callbuilder.cpp  callbuilder.h  contactbuilder.cpp  plugin.cpp  plugin.h  ringaccountbuilder.cpp  ringaccountbuilder.h  sharedmodellocker.cpp  sharedmodellocker.h  timelinefilter.cpp  timelinefilter.h  timelineiterator.cpp  timelineiterator.h  useractionfilter.cpp  useractionfilter.h
src/: account.cpp  account.h  accountmodel.cpp  accountmodel.h  accountstatusmodel.cpp  accountstatusmodel.h  address.cpp  address.h  availableaccountmodel.cpp  availableaccountmodel.h  bannedcontactmodel.cpp  bookmarkmodel.cpp  bookmarkmodel.h  bootstrapmodel.cpp  call.cpp  call.h  callhistorymodel.cpp  callhistorymodel.h  callmodel.cpp  callmodel.h  categorizedbookmarkmodel.cpp  categorizedbookmarkmodel.h  categorizedcontactmodel.cpp  categorizedcontactmodel.h  categorizedhistorymodel.cpp  categorizedhistorymodel.h  certificate.cpp  certificate.h  certificatemodel.cpp  ciphermodel.cpp  codecmodel.cpp  codecmodel.h  collectioneditor.hpp  collectionextensionmodel.cpp  collectionextensionmodel.h  collectionextensionmodel.hpp  collectioninterface.h  collectionmanagerinterface.h  collectionmodel.cpp  collectionmodel.h  (+115 more)
src/audio/: alsapluginmodel.cpp  managermodel.cpp
src/collections/: daemoncertificatecollection.h  fallbackpersoncollection.cpp  fallbackpersoncollection.h  foldercertificatecollection.cpp  foldercertificatecollection.h  localbookmarkcollection.cpp  localbookmarkcollection.h  localhistorycollection.cpp  localhistorycollection.h  localinfotemplatecollection.cpp  localinfotemplatecollection.h  localmacrocollection.cpp  localmacrocollection.h  localnameservicecache.cpp  localnameservicecache.h  localprofilecollection.cpp  localprofilecollection.h  localrecordingcollection.cpp  localrecordingcollection.h  localringtonecollection.cpp  localringtonecollection.h  localtextrecordingcollection.cpp  localtextrecordingcollection.h  notificationstatecollection.cpp  notificationstatecollection.h  numbercategory.cpp  numbercategory.h  peerprofilecollection2.cpp  peerprofilecollection2.h  transitionalpersonbackend.cpp  transitionalpersonbackend.h
src/dbus/: callmanager.cpp  configurationmanager.cpp  instancemanager.cpp  metatypes.h  presencemanager.cpp  videomanager.cpp  videomanager.h
src/extensions/: presencecollectionextension.cpp  presencecollectionextension.h  securityevaluationextension.cpp  securityevaluationextension.h
src/interfaces/: actionextenderi.h  audioformati.h  fileprovideri.h  itemmodelstateserializeri.h  pixmapmanipulatori.h  videoformati.h
src/interfaces/android/: androidaudioformat.cpp  androidaudioformat.h  androidvideoformat.cpp  androidvideoformat.h
src/interfaces/default/: pixmapmanipulatordefault.h
src/libcard/: calendar.cpp  calendar.h  event.cpp  event.h  eventaggregate.cpp  eventaggregate.h  flagutils.h  historyimporter.cpp  historyimporter.h  matrixutils.h  matrixutils.hpp
src/libcard/private/: event_p.h  eventmodel_p.h  icsbuilder.cpp  (+4 more)
src/media/: attachment.cpp  attachment.h  availabilitytracker.cpp  availabilitytracker.h  avrecording.cpp  avrecording.h  file.cpp  file.h  media.cpp  media.h  mimemessage.cpp  mimemessage.h  recording.cpp  recording.h  recordingmodel.cpp  recordingmodel.h  text.cpp  textrecording.cpp  textrecording.h  video.cpp  video.h
src/picocms/: collectioneditor.h  collectioneditor.hpp  collectionextensionmodel.cpp  collectionextensionmodel.h  collectionextensionmodel.hpp  collectioninterface.cpp  collectioninterface.h  collectioninterface.hpp  collectionmanagerinterface.cpp  collectionmanagerinterface.h  collectionmanagerinterface.hpp  collectionmediator.h  collectionmediator.hpp  collectionmodel.cpp  itembase.cpp  itembase.h
src/private/: account_p.h  accountmodel_p.h  addressmodel.cpp  addressmodel.h  call_p.h  certificatemodel_p.h  cmcallsmodel.cpp  cmcallsmodel.h  contactmethod_p.h  directrenderer.cpp  individualdirectory_p.h  lensmanager_p.cpp  lensmanager_p.h  matrixutils.h  matrixutils.hpp  media_p.h  modelutils.h  notificationstatemodel_p.cpp  notificationstatemodel_p.h  numbercategorymodel_p.h  pendingcontactrequestmodel_p.h  person_p.h  personcmmodel.cpp  personcmmodel.h  personstatistics.hpp  phonedirectorymodel_p.h  ringdevicemodel_p.h  securityevaluationmodel_p.h  shmrenderer.cpp  sortproxies.cpp  textrecording_p.h  textrecordingcache.cpp  textrecordingcache.h  textrecordingmodel.cpp  textrecordingmodel.h  threadworker.cpp  timelinelens_p.cpp  timelinelens_p.h  useractions.h  vcardutils.cpp  (+4 more)
src/qtwrapper/: CMakeLists.txt  callmanager_wrap.h  configurationmanager_wrap.h  instancemanager.cpp  instancemanager_wrap.h  presencemanager_wrap.h  videomanager_wrap.cpp  videomanager_wrap.h
src/troubleshoot/: absent.cpp  absent.h  base.cpp  base.h  callstate.cpp  callstate.h  crequest.cpp  crequest.h  dispatcher.cpp  dispatcher.h  generic.cpp  generic.h  handshake.cpp  handshake.h  unhold.cpp  unhold.h  videostuck.cpp  videostuck.h
src/video/: channel.cpp  configurationproxy.cpp  configurationproxy.h  device.cpp  devicemodel.cpp  devicemodel.h  previewmanager.cpp  previewmanager.h  rate.cpp  renderer.cpp  renderer.h  sourcemodel.cpp  sourcemodel.h
translations/: lrc_ar.ts  lrc_bg.ts  lrc_ca.ts  lrc_cs_CZ.ts  lrc_da_DK.ts  lrc_de.ts  lrc_de_DE.ts  lrc_el.ts  lrc_en.ts  lrc_en_GB.ts  lrc_eo.ts  lrc_es.ts  lrc_et_EE.ts  lrc_fa_IR.ts  lrc_fi.ts  lrc_fr.ts  lrc_fr_CA.ts  lrc_fr_FR.ts  lrc_he.ts  lrc_hi_IN.ts  lrc_hr.ts  lrc_hu.ts  lrc_id.ts  lrc_it.ts  lrc_it_IT.ts  lrc_ja.ts  lrc_lt.ts  lrc_ms.ts  lrc_nb.ts  lrc_nl.ts  lrc_nl_NL.ts  lrc_pl.ts  lrc_pt.ts  lrc_pt_BR.ts  lrc_ro.ts  lrc_ru.ts  lrc_ru_RU.ts  lrc_sk_SK.ts  lrc_sq_AL.ts  lrc_sv.ts  (+5 more)
(+3 files in other folders)
